DTSPB-3737 fix missing deceased alias